weather.css
.container {
  font-family: "Source Serif Pro", serif;
  margin-block-start: 0;
  margin-block-end: 0;
  text-align: center;
}
.weatherApp {
  background: linear-gradient(to right, rgb(242, 112, 156), rgb(255, 148, 114));
  border: 5px solid aquamarine;
  border-radius: 2px;
  box-shadow: 9px 9px 5px rgba(209, 206, 206, 0.664);
  padding: 40px;
  margin-block-start: 25px;
  margin-left: 90px;
  margin-right: 90px;
  margin-block-end: 25px;
}
.fiveDays {
  text-align: center;
  font-size: 20px;
  padding: 20px;
}
.emojis {
  font-size: 50px;
}
.btn {
  display: block;
  background-color: #ffff;
  cursor: pointer;
  transition: 250ms ease-in;
  width: 250px;
}
.btn :hover {
  background-color: aquamarine;
}
.currentDay {
  font-size: 20px;
  padding-left: 30px;
  min-width: 500px;
  padding: 20px;
}
.addtInfo {
  text-align: right;
  min-width: 200px;
}
.form-text {
  font-style: italic;
  color: rgba(70, 68, 68, 0.932);
}

